// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - MasterCard renders MasterCard component 1`] = `
.c0 {
  width: 132px;
}

<div
  className="c0"
>
  <MasterCardIcon />
</div>
`;

exports[`COMPONENT - MasterCard renders small MasterCard component 1`] = `
.c0 {
  width: 44px;
}

<div
  className="c0"
>
  <MasterCardIcon />
</div>
`;
